--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "config-env",
-  "version": "1.0.0",
+  "name": "more-express-config",
+  "version": "1.0.4",
   "description": "read config by env path",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pinetek/config-env.git"
+    "url": "git+https://github.com/447491480/more-express-config.git"
   },
   "keywords": [
     "config",
@@ -20,9 +20,9 @@
   "author": "wjchang",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/pinetek/config-env/issues"
+    "url": "https://github.com/447491480/more-express-config/issues"
   },
-  "homepage": "https://github.com/pinetek/config-env#readme",
+  "homepage": "https://github.com/447491480/more-express-config#readme",
   "dependencies": {
     "chalk": "^1.1.3",
     "js-yaml": "^3.8.2",
